mudei o arquivo de linguagem para que os acentos não saíssem errados

--- a/pet-clinic-web/src/main/resources/messages/messages_pt_BR.properties
+++ b/pet-clinic-web/src/main/resources/messages/messages_pt_BR.properties
@@ -1,8 +1,8 @@
 welcome=Bem Vindo
-required=é necessário(a)
-notFound=não foi encontrado(a)
-duplicate=já está em uso
-nonNumeric=deve possuir somente números
-duplicateFormSubmission=Submissão duplicada não é permitida
-typeMismatch.date=data inválida
-typeMismatch.birthDate=data inválida
+required=\u00e9 necess\u00e1rio(a)
+notFound=n\u00e3o foi encontrado(a)
+duplicate=j\u00e1 est\u00e1 em uso
+nonNumeric=deve possuir somente n\u00fameros
+duplicateFormSubmission=Submiss\u00e3o duplicada n\u00e3o \u00e9 permitida
+typeMismatch.date=data inv\u00e1lida
+typeMismatch.birthDate=data inv\u00e1lida
